Force GPU rendering to fix asciinema on Safari 16 and below (#1378)
Use translateZ to force GPU rendering in Safari to fix asciinema
rendering

Follow up to remaining issue on
https://github.com/NixOS/nixos-homepage/issues/1323

It looks like newer versions of safari have fixed this
https://github.com/asciinema/asciinema-player/issues/258
but if we want to support older versions, this [translateZ GPU
hack](https://michaeluloth.com/css-translate-z/) seems
to work, at least for keeping the black terminal part within the parent
containers border.

The sizing of the player font can still be incorrect, so one workaround
is to make the `cover.scenario`
asciicast slightly wider than necessary to accommodate

IMO we should only merge this if we expect a decent amount of traffic
from Safari 16 and older

### Recordings
1. Previous buggy behavior
https://github.com/asciinema/asciinema-player/issues/258#issue-2216829767
2. After using `translateZ`, the terminal rendering doesn't bleed to the
right anymore, but you can see that some of the text overflows sometimes


https://github.com/NixOS/nixos-homepage/assets/217050/0c165e9e-12b8-4da4-9003-698db2ad1a18

3. After making the cover.scenario wider than technically necessary, the
text doesn't overflow



https://github.com/NixOS/nixos-homepage/assets/217050/62e14f5c-3f47-48ec-91b8-bbd0b24b3d89

---------

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,6 +7,10 @@
     main a:-webkit-any-link {
         @apply underline decoration-1 underline-offset-4 text-nixsemidarkblue;
     }
+
+    .ap-terminal {
+      @apply transform-gpu;
+    }
 }
 
 @layer components {
